CORE-134 #resolve Save dropdown menu moved to absolute positioning under body to fix overflow clipping issue

--- a/web-app/less/theme-tweaks.less
+++ b/web-app/less/theme-tweaks.less
@@ -29,9 +29,11 @@
 	opacity: 0.5;
 }
 
-#main-menu .menu-content {
-	padding-top: 20px;
-	padding-bottom: 0px;
-	border-top: none;
-	overflow: visible;
+#main-menu {
+	.menu-content {
+		padding-top: 20px;
+		padding-bottom: 0px;
+		border-top: none;
+		overflow: visible;
+	}
 }
